Add endpoint to login users
